# mechatrax

./: README.md  main.py  pyproject.toml
aws/: main.py
aws/scripts/: call.sh  log.sh  update.sh  zip_packages.sh
gcp/: README.md  main.py  pyproject.toml
gcp/scripts/: call.sh  call_dummy.sh  deploy.sh  serve_batch.sh  serve_raspberrypi.sh
pi/: README.md  main.py  pyproject.toml  sensor.service  start.sh
scripts/: create_role.sh  deploy.sh
