[tool.poetry]
name = "mechatrax"
version = "0.1.0"
description = ""
authors = ["shikajiro <shikajiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
aws-xray-sdk = "^2.7.0"
aws-lambda-typing = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
